LatestNewsCardsOverlay  Scrollbar mob-screen fixed

--- a/src/app/components/cards/best-team-cards/best-team-cards.component.scss
+++ b/src/app/components/cards/best-team-cards/best-team-cards.component.scss
@@ -62,7 +62,7 @@
 
 @media screen and (max-width:768px){
     .Best-team-section{
-        margin-top: 38rem !important;
+        margin-top: 40rem !important;
     }
 }
 .Best-team-section{
